[Accessibility] Fixed using low contrast color for texts.

--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ img {
 }
 
 .document>div>div {
-    color: #888888; /* todo */
+    /* color: #888888; No use for accessibility */
     font-size: 14px;
     font-weight: normal;
     margin: 14px 0px;
@@ -125,7 +125,7 @@ img {
 }
 
 .list>div>a>div {
-    color: #888888; /* todo */
+    /* color: #888888; No use for accessibility */
     font-size: 14px;
     font-weight: normal;
     margin: 0px;
